refactor : 코드 수정  collect -> toList() 사용